--- a/moviehub/src/app/pages/register/register.html
+++ b/moviehub/src/app/pages/register/register.html
@@ -13,6 +13,12 @@
         </div>
         <div class="field mb-5">
           <span class="p-float-label">
+            <label for="email">Email</label>
+            <input pInputText id="email" formControlName="email" class="mt-2 w-full">
+          </span>
+        </div>
+        <div class="field mb-5">
+          <span class="p-float-label">
             <label for="password">Password</label>
             <input pInputText id="password" type="password" formControlName="password" class="w-full mt-2">
           </span>
@@ -30,3 +36,4 @@
     </p-card>
   </div>
 </div>
+<p-toast></p-toast>
