home route and component

--- a/moviehub/src/app/pages/home/home.html
+++ b/moviehub/src/app/pages/home/home.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<div class="flex align-items-center justify-content-center min-h-screen bg-gradient">
+  <div class="w-full md:w-6 lg:w-7 xl:w-8 px-4">
+
+    <div class="flex justify-content-center mb-5">
+      <img src="Moviehub_LOGO.svg" alt="MovieHub Logo" class="logo" />
+    </div>
+
+    <div class="flex justify-content-center">
+      <div class="search-wrapper flex align-items-center">
+        <input
+          type="text"
+          pInputText
+          placeholder="Search Movie..."
+          class="search-input"
+        />
+        <p-button
+          icon="pi pi-search"
+          class="search-btn"
+          rounded="true"
+          text="true"
+        ></p-button>
+      </div>
+    </div>
+
+  </div>
+</div>
