--- a/moviehub/src/app/components/navbar/navbar.scss
+++ b/moviehub/src/app/components/navbar/navbar.scss
@@ -1,4 +1,11 @@
 .logo {
-  height: 30px;
-  margin-left: 15px;
+  height: 25px;
+  cursor: pointer;
 }
+
+.navbar {
+  background-color: #0d1117;
+  border-bottom: 1px solid #64dbf6;
+}
+
+
