small login page improvements

--- a/moviehub/src/app/pages/login/login.html
+++ b/moviehub/src/app/pages/login/login.html
@@ -2,7 +2,7 @@
   <div class="w-11 md:w-30rem px-4">
     <p-card class="glass-card animate-fadein">
       <div class="flex justify-content-center mb-6">
-        <img class="logo align-self-center" src="Moviehub_LOGO.svg" style="height: 50px;">
+        <img class="logo align-self-center" src="Moviehub_LOGO.svg" style="height: 50px;" alt="logo">
       </div>
       <form class="p-fluid" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="field mb-5">
