--- a/moviehub/src/styles.scss
+++ b/moviehub/src/styles.scss
@@ -25,15 +25,19 @@ body, html {
   border-radius: 16px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   transition: all 0.3s ease;
-  background: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.76);
   box-shadow: 0 20px 56px rgba(0, 0, 0, 0.5);
+}
+
+.p-card-body{
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
 }
 
 .glass-card:hover {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 20px 56px rgba(0, 0, 0, 0.5);
 }
-
 
 
 .p-inputtext:enabled:hover {
