--- a/moviehub/src/app/pages/movie-search/movie-search.html
+++ b/moviehub/src/app/pages/movie-search/movie-search.html
@@ -1,1 +1,10 @@
-<app-movie-search-card></app-movie-search-card>
+<div class="movies-grid flex grid m-6 max-w-screen">
+
+  @for (movie of movieSearchResults; track movie.imdbID) {
+    <div class="col-2">
+
+      <app-movie-search-card [movie]="movie"></app-movie-search-card>
+    </div>
+
+  }
+</div>
