--- a/moviehub/src/app/components/loading/loading.html
+++ b/moviehub/src/app/components/loading/loading.html
@@ -1,1 +1,22 @@
-<p>loading works!</p>
+@if (loading()) {
+  <div class="loader-overlay">
+    <div class="loader">
+      <div class="circle">
+        <div class="dot"></div>
+        <div class="outline"></div>
+      </div>
+      <div class="circle">
+        <div class="dot"></div>
+        <div class="outline"></div>
+      </div>
+      <div class="circle">
+        <div class="dot"></div>
+        <div class="outline"></div>
+      </div>
+      <div class="circle">
+        <div class="dot"></div>
+        <div class="outline"></div>
+      </div>
+    </div>
+  </div>
+}
