--- a/moviehub/src/app/pages/movie-search/movie-search.html
+++ b/moviehub/src/app/pages/movie-search/movie-search.html
@@ -1,10 +1,9 @@
-<div class="movies-grid flex grid m-6 max-w-screen">
-
-  @for (movie of movieSearchResults; track movie.imdbID) {
-    <div class="col-2">
-
-      <app-movie-search-card [movie]="movie"></app-movie-search-card>
+<div class="flex justify-content-center">
+    <div class="movies-grid grid m-3 responsive-container">
+        @for (movie of movieSearchResults; track movie.imdbID) {
+            <div class="col-12 sm:col-6 md:col-4 lg:col-3">
+                <app-movie-search-card [movie]="movie"></app-movie-search-card>
+            </div>
+        }
     </div>
-
-  }
 </div>
