--- a/moviehub/src/app/pages/movie-search/movie-search.html
+++ b/moviehub/src/app/pages/movie-search/movie-search.html
@@ -1,8 +1,8 @@
 <div class="flex justify-content-center">
     <div class="movies-grid grid m-3 responsive-container">
-        @for (movie of movieSearchResults; track movie.imdbID) {
+        @for (movie of _movieService.moviesResponse(); track movie.imdbID) {
             <div class="col-12 sm:col-6 md:col-4 lg:col-3">
-                <app-movie-search-card [movie]="movie"></app-movie-search-card>
+                <app-movie-search-card (click)="selectMovie(movie.imdbID)" [movie]="movie"></app-movie-search-card>
             </div>
         }
     </div>
